# mymouse

./: .gitignore  .gitmodules  README.md  boot.lua  dodo.py
MouseConnect/mouseconnect/: main.swift
MouseConnect/mouseconnect.xcodeproj/: project.pbxproj
MouseConnect/mouseconnect.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
MouseV2-nRF/: CMakeLists.txt  Kconfig  poc.lua  prj.conf  test-report.md
MouseV2-nRF/adns7530_driver/zephyr/: CMakeLists.txt  Kconfig  adns7530_driver.c  adns7530_driver.h  adns7530_driver_trigger.c
MouseV2-nRF/boards/arm/mousev2/: Kconfig.board  Kconfig.defconfig  board.cmake  mousev2.dts  mousev2_defconfig
MouseV2-nRF/dts/bindings/sensor/: pixart,adns7530.yaml
MouseV2-nRF/include/: battery.h  bluetooth.h  fs.h  hids.h  lua_mv2lib.h  lua_worker.h  mouseconnect.h  state.h  sys.h
MouseV2-nRF/lua/: CMakeLists.txt  lauxlib.c  lauxlib.h  llimits.h  lua.h  luaconf.h  patches.h
MouseV2-nRF/src/: battery.c  bluetooth.c  fs.c  hids.c  lua_mv2lib.c  lua_worker.c  main.c  mouseconnect.c  state.c  sys.c
MouseV2-nRF/umm_malloc/: CMakeLists.txt  revision.txt
MouseV2-nRF/umm_malloc/src/: umm_malloc_cfgport.h
app-avr/: .credits  CMakeLists.txt
app-avr/bootloader/: BootloaderHID.c  BootloaderHID.h  CMakeLists.txt  Descriptors.c  Descriptors.h
app-avr/bootloader/Config/: LUFAConfig.h
app-avr/cmake/: generic-gcc-avr.cmake  lufa.cmake
app-avr/common/: CMakeLists.txt  app_bootloader_interface.h
app-avr/hidcli/: pyproject.toml
app-avr/hidcli/src/hidcli/: __init__.py  __main__.py  intelhex_reader.py
app-avr/hidcli/src/hidcli/device/: __init__.py  app_mode.py  bootloader_mode.py  mode.py
app-avr/hidcli/test/: conftest.py  test_bootloader_comm.py
app-avr/src/: CMakeLists.txt  Descriptors.c  Descriptors.h  Mouse.c  Mouse.h  descriptors.c  descriptors.h  main.c  reporting.c  reporting.h  spi.c  spi.h  spi_commands.c  spi_commands.h
app-avr/src/Config/: LUFAConfig.h
app-nrf/: CMakeLists.txt  Kconfig  design.md  iterables_rom.ld  prj.conf
app-nrf/include/: devices.h  hidenc.h  util.h
app-nrf/include/drivers/: adns7530.h
app-nrf/include/platform/: adc.h  clock_suppl.h  gpio.h  hw_resources.h  pwm.h  qdec.h  shutdown.h  spi.h  timer_utils.h
app-nrf/include/services/: battery.h  bootopts.h  button_mode.h  debounce.h
app-nrf/include/services/hid/: collector.h  sink.h  source.h  types.h
app-nrf/include/shell/: report.h
app-nrf/include/transport/: transport.h
app-nrf/include/transport/bt/: adv.h  conn.h  hids.h  transport.h
app-nrf/include/util/: bitmanip.h  toggle_queue.h
app-nrf/src/: CMakeLists.txt  Kconfig  devices.c  hidenc.c  main.c
app-nrf/src/drivers/: CMakeLists.txt  Kconfig  adns7530.c
app-nrf/src/platform/: CMakeLists.txt  Kconfig  adc.c  boot_cond.c  clock_suppl.c  gpio.c  log.c  pwm.c  qdec.c  shutdown.c  spi.c  startup.c  thread_respool_workaround.c
app-nrf/src/services/: CMakeLists.txt  Kconfig  avr_comm.c  battery.c  bootopts.c  button_mode.c  debounce.c
app-nrf/src/services/hid/: CMakeLists.txt  Kconfig  collector.c
app-nrf/src/services/hid/sink/: CMakeLists.txt  Kconfig  stub.c  transport.c
app-nrf/src/services/hid/source/: CMakeLists.txt  Kconfig  buttons.c  encoder.c  legacy.c  opt_sensor.c
app-nrf/src/shell/: CMakeLists.txt  Kconfig  hid.c  platform.c  report.c  services.c
app-nrf/src/transport/: CMakeLists.txt  Kconfig
app-nrf/src/transport/bt/: CMakeLists.txt  adv.c  conn.c  hids.c  transport.c
boards/arm/mousev2/: Kconfig  Kconfig.board  board.cmake  mousev2.dts  mousev2.yaml  mousev2_defconfig
hidcli/: Cargo.toml
hidcli/src/: avr_flashing.rs  cli.rs  communicator.rs  lib.rs  main.rs
interface/: CMakeLists.txt
interface/hid/: CMakeLists.txt  hid_report_map.c  hid_report_map.h  hid_report_struct.h
samples/logging/: prj.conf
samples/shell/: CMakeLists.txt  mpu.conf  prj.conf
(+18 files in other folders)
